// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader repository component renders correctly, 1 case 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#eb9e38"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "marginTop": 100,
      }
    }
  />
</View>
`;

exports[`Loader repository component renders correctly, 2 case 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#eb9e38"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "marginTop": 100,
      }
    }
  />
</View>
`;

exports[`Loader repository component renders correctly, 3 case 1`] = `
<View
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#eb9e38"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "marginTop": 0,
      }
    }
  />
</View>
`;
